2005-02-26  jrandom     * Force 1.3-isms on the precompiled jsps too (thanks laberhost)
Monotone-Parent: 953ecc1ce77a4274c8fc5422ded16798f5ea595d
Monotone-Revision: 1f6be4bc22e83a664ecf5be8abe371262be1bce5

Monotone-Author: jrandom
Monotone-Date: 2005-02-27T00:03:42
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.157 2005/02/24 18:53:35 jrandom Exp $
+$Id: history.txt,v 1.158 2005/02/26 14:16:46 jrandom Exp $
+
+2005-02-26  jrandom
+    * Force 1.3-isms on the precompiled jsps too (thanks laberhost)
 
 2005-02-26  jrandom
     * Further streaming lib caching improvements
