* Properly expand the HTTP response header buffer (thanks shendaras!)
Monotone-Parent: 362de04d592a51e0a093feb8aa314b53b4b8fa9a
Monotone-Revision: f38c582febca4b56ea0017b5dadca76301f75cdb

Monotone-Author: jrandom
Monotone-Date: 2005-03-07T00:40:45
Monotone-Branch: i2p.i2p
Monotone-Tag: i2p_0_5_0_2

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,4 @@
-$Id: history.txt,v 1.164 2005/03/04 21:54:42 jrandom Exp $
+$Id: history.txt,v 1.165 2005/03/06 19:07:27 jrandom Exp $
 
 * 2005-03-06  0.5.0.2 released
 
@@ -10,6 +10,7 @@ $Id: history.txt,v 1.164 2005/03/04 21:54:42 jrandom Exp $
     * Added a startRouter.sh script to new installs which simply calls 
       "sh i2prouter start".  This should make it clear how people should start
       I2P.
+    * Properly expand the HTTP response header buffer (thanks shendaras!)
 
 2005-03-04  jrandom
     * Filter HTTP response headers in the eepproxy, forcing Connection: close
