2005-03-07  jrandom     * Fix the HTTP response header filter to allow multiple headers with the       same name (thanks duck and spotteri!)
Monotone-Parent: f38c582febca4b56ea0017b5dadca76301f75cdb
Monotone-Revision: 916d798df57aaa4ae066e9a4d1057ec797cfa43a

Monotone-Author: jrandom
Monotone-Date: 2005-03-08T02:45:14
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.165 2005/03/06 19:07:27 jrandom Exp $
+$Id: history.txt,v 1.166 2005/03/06 19:40:45 jrandom Exp $
+
+2005-03-07  jrandom
+    * Fix the HTTP response header filter to allow multiple headers with the
+      same name (thanks duck and spotteri!)
 
 * 2005-03-06  0.5.0.2 released
 
