2005-03-18  jrandom     * Eepproxy Fix for corrupted HTTP headers (thanks nickster!)     * Fixed case sensitivity issues on the HTTP headers (thanks duck!)
Monotone-Parent: b318086d0153d546d47262618a0318224ed3f7ad
Monotone-Revision: 8ee066f9d7beb3db77467a1157683111adb765ef

Monotone-Author: jrandom
Monotone-Date: 2005-03-18T08:48:00
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.170 2005/03/17 00:29:55 jrandom Exp $
+$Id: history.txt,v 1.171 2005/03/17 17:14:31 jrandom Exp $
+
+2005-03-18  jrandom
+    * Eepproxy Fix for corrupted HTTP headers (thanks nickster!)
+    * Fixed case sensitivity issues on the HTTP headers (thanks duck!)
 
 2005-03-17  jrandom
     * Update the old speed calculator and associated profile data points to 
