* 2005-03-18  0.5.0.3 released 2005-03-18  jrandom     * Minor tweak to the timestamper to help reduce small skews     * Adjust the stats published to include only the relevent ones     * Only show the currently used speed calculation on the profile page     * Allow the full max # resends to be sent, rather than piggybacking the       RESET packet along side the final resend (duh)     * Add irc.postman.i2p to the default list of IRC servers for new installs     * Drop support for routers running 0.5 or 0.5.0.1 while maintaining       backwards compatability for users running 0.5.0.2.
Monotone-Parent: 8ee066f9d7beb3db77467a1157683111adb765ef
Monotone-Revision: 451a36f3ec422f5ff6d168940a5443530ba8aa72

Monotone-Author: jrandom
Monotone-Date: 2005-03-18T22:34:51
Monotone-Branch: i2p.i2p
Monotone-Tag: i2p_0_5_0_3

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,16 @@
-$Id: history.txt,v 1.171 2005/03/17 17:14:31 jrandom Exp $
+$Id: history.txt,v 1.172 2005/03/18 03:48:00 jrandom Exp $
+
+* 2005-03-18  0.5.0.3 released
+
+2005-03-18  jrandom
+    * Minor tweak to the timestamper to help reduce small skews
+    * Adjust the stats published to include only the relevent ones
+    * Only show the currently used speed calculation on the profile page
+    * Allow the full max # resends to be sent, rather than piggybacking the
+      RESET packet along side the final resend (duh)
+    * Add irc.postman.i2p to the default list of IRC servers for new installs
+    * Drop support for routers running 0.5 or 0.5.0.1 while maintaining 
+      backwards compatability for users running 0.5.0.2.
 
 2005-03-18  jrandom
     * Eepproxy Fix for corrupted HTTP headers (thanks nickster!)
