2005-03-23  jrandom     * Implemented the news fetch / update policy code, as configurated on       /configupdate.jsp.  Defaults are to grab the news every 24h (or if it       doesn't exist yet, on startup).  No action is taken however, though if       the news.xml specifies that a new release is available, an option to       update will be shown on the router console.     * New initialNews.xml delivered with new installs, and moved news.xml out       of the i2pwww module and into the i2p module so that we can bundle it       within each update.
Monotone-Parent: 0aa4d283f4a4f5ebd290eafb3ca4d0aaa345e868
Monotone-Revision: 3368edd867e7e60f4e721c5293cc367354ea4bd0

Monotone-Author: jrandom
Monotone-Date: 2005-03-24T01:19:52
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,14 @@
-$Id: history.txt,v 1.174 2005/03/21 20:38:21 jrandom Exp $
+$Id: history.txt,v 1.175 2005/03/23 16:13:05 jrandom Exp $
+
+2005-03-23  jrandom
+    * Implemented the news fetch / update policy code, as configurated on
+      /configupdate.jsp.  Defaults are to grab the news every 24h (or if it
+      doesn't exist yet, on startup).  No action is taken however, though if
+      the news.xml specifies that a new release is available, an option to
+      update will be shown on the router console.
+    * New initialNews.xml delivered with new installs, and moved news.xml out
+      of the i2pwww module and into the i2p module so that we can bundle it 
+      within each update.
 
 2005-03-23  jrandom
     * New /configupdate.jsp page for controlling the update / notification 
