--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.175 2005/03/23 16:13:05 jrandom Exp $
+$Id: history.txt,v 1.176 2005/03/23 20:51:58 Connelly Exp $
+
+2005-03-23  Connelly
+    * Fixed Bugzilla Bug #99 in the SAM Bridge, which caused pending
+      stream send data to not be sent if STREAM CLOSE is issued too fast.
 
 2005-03-23  jrandom
     * Implemented the news fetch / update policy code, as configurated on
