2005-03-23  jrandom     * Added support for Transfer-Encoding: chunked to the EepGet, so that the       cvsweb.cgi doesn't puke on us.
Monotone-Parent: e5928a7a67a6d66ce5fc9c104f56af0a8407a713
Monotone-Revision: 70fb15dc3e185e6ac196fb79e2a999cd275acaf1

Monotone-Author: jrandom
Monotone-Date: 2005-03-24T02:38:10
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.176 2005/03/23 20:51:58 Connelly Exp $
+$Id: history.txt,v 1.177 2005/03/23 20:54:23 connelly Exp $
+
+2005-03-23  jrandom
+    * Added support for Transfer-Encoding: chunked to the EepGet, so that the
+      cvsweb.cgi doesn't puke on us.
 
 2005-03-23  Connelly
     * Fixed Bugzilla Bug #99 in the SAM Bridge, which caused pending
