2005-03-23  jrandom     * Added more intelligent version checking in news.xml, in case we have a       version newer than the one specified.
Monotone-Parent: 70fb15dc3e185e6ac196fb79e2a999cd275acaf1
Monotone-Revision: ab62c3be272f5e22b9d8408d4555e34ad6f97d11

Monotone-Author: jrandom
Monotone-Date: 2005-03-24T03:18:15
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.177 2005/03/23 20:54:23 connelly Exp $
+$Id: history.txt,v 1.178 2005/03/23 21:38:10 jrandom Exp $
+
+2005-03-23  jrandom
+    * Added more intelligent version checking in news.xml, in case we have a 
+      version newer than the one specified.
 
 2005-03-23  jrandom
     * Added support for Transfer-Encoding: chunked to the EepGet, so that the
