2005-03-25  jrandom     * Fixed up building dependencies for the routerconsole on some more       aggressive compilers (thanks polecat!)
Monotone-Parent: 3e450f4ef0644e9d7011a57b75d85e2e12eb9ba1
Monotone-Revision: 1c7a178fba6700d06020cbc20f5f95dffff19aca

Monotone-Author: jrandom
Monotone-Date: 2005-03-25T04:07:05
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.179 2005/03/23 22:18:16 jrandom Exp $
+$Id: history.txt,v 1.180 2005/03/24 02:29:27 jrandom Exp $
+
+2005-03-25  jrandom
+    * Fixed up building dependencies for the routerconsole on some more 
+      aggressive compilers (thanks polecat!)
 
 * 2005-03-24  0.5.0.4 released
 
