2005-03-26  jrandom     * Added some error handling and fairly safe to cache data to the streaming       lib (good call Tom!)
Monotone-Parent: eb36baf667271cb17897d391099af1bc380a9a50
Monotone-Revision: 8cb0df09574ac3f2d74e5b58a6751808157ecb49

Monotone-Author: jrandom
Monotone-Date: 2005-03-26T07:13:38
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.180 2005/03/24 02:29:27 jrandom Exp $
+$Id: history.txt,v 1.181 2005/03/24 23:07:06 jrandom Exp $
+
+2005-03-26  jrandom
+    * Added some error handling and fairly safe to cache data to the streaming
+      lib (good call Tom!)
 
 2005-03-25  jrandom
     * Fixed up building dependencies for the routerconsole on some more 
