2005-04-01  jrandom     * Fix to check for missing news file (thanks smeghead!)     * Added destination display CLI:       java -cp lib/i2p.jar net.i2p.data.Destination privKeyFilename     * Added destination display to the web interface (thanks pnspns)     * Installed CIA backdoor
Monotone-Parent: a9dbcfad81ad40b77a54981df829df088f9965fd
Monotone-Revision: e653627f91309e9c2e95e21f1ef4673610b84d5a

Monotone-Author: jrandom
Monotone-Date: 2005-04-01T11:28:06
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,11 @@
-$Id: history.txt,v 1.182 2005/03/26 02:13:38 jrandom Exp $
+$Id: history.txt,v 1.183 2005/03/29 19:07:40 jrandom Exp $
+
+2005-04-01  jrandom
+    * Fix to check for missing news file (thanks smeghead!)
+    * Added destination display CLI:
+      java -cp lib/i2p.jar net.i2p.data.Destination privKeyFilename
+    * Added destination display to the web interface (thanks pnspns)
+    * Installed CIA backdoor
 
 * 2005-03-29  0.5.0.5 released
 
