2005-04-01  jrandom     * Allow editing I2PTunnel server instances with five digit ports       (thanks nickless_head!)     * More NewsFetcher debugging for reported weirdness
Monotone-Parent: e653627f91309e9c2e95e21f1ef4673610b84d5a
Monotone-Revision: 58c702d6dbabaf14d679afdb7054f0350be4d8d9

Monotone-Author: jrandom
Monotone-Date: 2005-04-01T13:29:26
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.183 2005/03/29 19:07:40 jrandom Exp $
+$Id: history.txt,v 1.184 2005/04/01 06:28:07 jrandom Exp $
+
+2005-04-01  jrandom
+    * Allow editing I2PTunnel server instances with five digit ports 
+      (thanks nickless_head!)
+    * More NewsFetcher debugging for reported weirdness
 
 2005-04-01  jrandom
     * Fix to check for missing news file (thanks smeghead!)
