2005-04-03  jrandom     * EepGet fix for open-ended HTTP fetches (such as the news.xml       feeding the NewsFetcher)
Monotone-Parent: 34e57885f674347ae11ecf9645f1159615f13261
Monotone-Revision: 5c632e8ee071251f7c0dcd4e4bed76afa89dc19a

Monotone-Author: jrandom
Monotone-Date: 2005-04-03T12:50:11
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.184 2005/04/01 06:28:07 jrandom Exp $
+$Id: history.txt,v 1.185 2005/04/01 08:29:27 jrandom Exp $
+
+2005-04-03  jrandom
+    * EepGet fix for open-ended HTTP fetches (such as the news.xml 
+      feeding the NewsFetcher)
 
 2005-04-01  jrandom
     * Allow editing I2PTunnel server instances with five digit ports 
